<resources>
    <string name="app_name">Vyper</string>
    <string name="empty_key">Ta em branco ainda</string>
    <string name="title_activity_scrolling">Comanda</string>

    <string name="action_settings">Settings</string>
    <string name="abrir_comanda">Abrir Comanda</string>
    <string name="leitor_biometria">Toque com o polegar direito no leitor de biometria para reconhecer um cadastro ou criar um novo!</string>
    <string name="toque_no_sensor">Toque no sensor</string>
    <string name="title_activity_comanda">Comanda</string>
    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="carregando">Carregando, Aguarde ..</string>
    <string name="title_activity_maps">Map</string>
    <string name="novo_cliente">Cadastro de cliente</string>
    <string name="salvar">SALVAR</string>
    <string name="items">Bar</string>
    <string name="hint_searchable">Buscar</string>
    <string name="titulo_items">Itens pedidos</string>
    <string name="empty_list" >Sem item para mostrar</string>
    <string name="pedido">Enviar Pedido</string>
    <string name="pagamento">Pagamento</string>
    <string name="forma_cartao">Cartão</string>
    <string name="forma_dinheiro">Dinheiro</string>
    <string name="comprovante_pagamento">Comprovante de Pagamento</string>
    <string name="enviar_email">Enviar por email</string>
    <string name="imprimir_compr">Imprimir</string>
    <string name="finalizar">Finalizar</string>
    <string name="connection_error">Erro na conexao</string>
    <string name="gerando_chave_acesso">Gerando chave de acesso!</string>
    <string name="btn_entendi">Entendi</string>
    <string name="erro_msg_24_horas">Ocorreu algum erro interno verifique com o suporte 24H! o envio é imediato!</string>
    <string name="erro_app">Erro na aplicação!</string>
    <string name="sincronizando">Sincronizando!!</string>
</resources>
